# pdf_seudo

./: .gitignore  DOCUMENTACION.md  OPENCODE.md  OPENCODE_UX.md  OPENCODE_V2.md  context_menu_guide.md  implementation_plan.md  main.py  pyproject.toml
diseño/: INSTRUCCIONES_ANTIGRAVITY.md  referencia.html
src/pdf_pseudo/: __init__.py  detector.py  mapper.py  pdf_utils.py
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_coords.py  test_detector.py  test_mapper.py  test_pdf_utils.py  test_roundtrip.py
